src/web/assets/cp/src/css/_cp.scss
/* ... */
#app-info {
  display: flex;
  flex-direction: row;
  justify-content: center;
  gap: var(--m);
}

#trial-info {
  padding: 16px var(--xl);
  border-radius: var(--large-border-radius);
  background-color: hsl(212, 40%, 90%);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5),
    0 0 0 1px hsl(212, 30%, 80%), 0 2px 12px transparentize($grey200, 0.5);
  text-align: center;
}

#app-version {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 12px;
  color: var(--gray-600);
  text-align: center;
  gap: var(--s);

  a {
    color: var(--gray-600);
    text-decoration: underline;

    &.go:hover:after {
      color: var(--gray-600);
    }
  }
}

#edition-logo {
  position: relative;
  top: -1px;
  user-select: none;
  border: 1px solid var(--gray-600);
  border-radius: 3px;
  display: inline-flex;
  box-sizing: content-box;
  font-size: 11px;
  padding: 6px 7px;
  line-height: 8px;
  font-weight: 600;
  letter-spacing: 1.7px;
  padding-right: 5px;
  text-transform: uppercase;
}

#devmode {
  flex: 0 0 4px;
  width: 100%;
  min-height: 4px; // fixes Windows scaling bug (https://github.com/craftcms/cms/issues/3259)
  background: url(../images/dev-mode.svg) repeat-x 21px 0;
  cursor: help;
}

#page-container {
  @include padding-left($sidebarWidth);
  display: flex;
  flex-direction: column;
  flex-grow: 1;
}

#alerts {
  position: relative; // to keep it above #global-header's shadow
  background-color: var(--red-050);
  border-left: 6px solid var(--error-color);
  color: var(--error-color);

  & > li {
    padding: 10px 24px;
    box-shadow: inset 0 -1px 0 0 var(--red-100);

    a.btn,
    a.go {
      display: inline-flex;
      align-items: center;
    }

    a:not(.btn) {
      color: var(--error-color);
      text-decoration: underline;

      &.go {
        text-decoration: none;
        white-space: nowrap;
        border: 1px solid transparentize($errorColor, 0.5);
        border-radius: var(--medium-border-radius);
        padding: 4px 5px;
        margin: 0 2px;

        &:after {
          color: var(--error-color);
          font-size: 15px;
          margin-top: 1px;
        }

        &:hover {
          border-color: var(--error-color);
        }
      }
    }
  }
}

#global-header,
li.crumb {
  .menubtn,
  .action-btn {
    padding: 0 var(--s) !important;
    height: var(--touch-target-size);

    &:not(:hover):not(:active) {
      background-color: transparent;
    }
  }
}

#global-header {
  width: 100%;
  margin-bottom: var(--m);
  @include pane;
  background: var(--gray-050);

  .flex {
    height: calc(44rem / 16);
    align-items: center;
  }

  .btn {
    --ui-control-color: var(--gray-400);
    --ui-control-hover-color: var(--gray-500);
    --ui-control-active-color: var(--gray-600);
  }
}

.nav-toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 44px;
  min-width: 44px;
  height: calc(44rem / 16);
  border-right: 1px solid var(--medium-hairline-color);
  line-height: 26px;
  color: currentColor;
  text-align: center;

  &:before {
    @include icon;
    content: 'menu';
    font-size: 16px;
    line-height: 0;
  }

  &:hover {
    color: var(--gray-400);
  }
}

#crumbs {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-size: 13px;
  margin: 0 !important;
  max-width: 100%;
  overflow-x: hidden;

  &.empty {
    display: none;
  }

  nav {
    margin: 0;
  }
}

#primary-nav-toggle {
  &:focus-visible {
    box-shadow: var(--inner-focus-ring);
  }
}

#crumb-list {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  flex-wrap: nowrap;
  max-width: 100%;
  height: calc(44rem / 16);

  --arrow-padding: 10;
  --arrow-height: 22;
  --arrow-angle: 35;
  --arrow-width: 17.1111; // height/(45/angle)
  --arrow-c: 27.871; // sqrt(height^2+width^2)

  body.rtl & {
    --arrow-angle: -35;
    --arrow-width: -19.4444;
  }

  li.crumb {
    position: relative;
    @include padding-left(calc(var(--arrow-width) * 0.5rem / 16));
    cursor: default;
    color: var(--light-text-color);

    &:not(.current) {
      @include padding-right(calc(var(--arrow-width) * 1rem / 16));

      &:before,
      &:after {
        display: block;
        content: '';
        width: 1px;
        height: calc(var(--arrow-c) * 1rem / 16);
        position: absolute;
        @include right(calc(var(--arrow-width) * 0.5rem / 16));
        background: var(--medium-hairline-color);
        pointer-events: none;
      }

      &:before {
        top: calc((var(--arrow-height) - var(--arrow-c)) / 2 * 1rem / 16);
        transform: rotate(calc(var(--arrow-angle) * -1deg));
      }

      &:after {
        bottom: calc((var(--arrow-height) - var(--arrow-c)) / 2 * 1rem / 16);
        transform: rotate(calc(var(--arrow-angle) * 1deg));
      }
    }
  }

  & .menu--disclosure {
    li {
      display: block;

      &::after {
        content: none;
      }
    }
  }
}

#crumb-menu-trigger {
  min-width: var(--touch-target-size);

  &:before {
    width: 100%;
  }
}

#crumb-menu {
  .chip {
    min-height: 44px;
  }
}
/* ... */

